// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Iframe proxying utils proxyIframe should proxy a secure iframe 1`] = `
<iframe
  src="/proxy/iframe?url=https%3A%2F%2Fgoogle.com"
/>
`;

exports[`Iframe proxying utils proxyIframe should proxy an insecure iframe 1`] = `
<iframe
  data-insecure="true"
  scrolling="no"
  src="/proxy/iframe?url=http%3A%2F%2Fgoogle.com"
/>
`;

exports[`Iframe proxying utils proxyIframes 1`] = `
<div>
  <iframe
    src="/proxy/iframe?url=https%3A%2F%2Fgoogle.com"
  />
  <iframe
    data-insecure="true"
    scrolling="no"
    src="/proxy/iframe?url=http%3A%2F%2Findex.hu"
  />
</div>
`;
